# elagrija.github.io

./: 2 test @ltts.txt  Backup code  CMakeLists.txt  COM.7z  Copy of POA1.xlsx  EDR-Evasion.docx  EDR-Evasion1 new.docx  EDR-Evasion1.docx  Ela's cortex EDR.odt  HelloWorldXll.xll  Key to COMpromise.7z  May 30 th Search Data.txt  PT_Lnt Defence.txt  README.md  Search Result Ela.txt  Writing your own RDI _sRDI loader using C and ASM.html  cenc  cshelldll_prog.txt  dllproxyrawcode.txt  grimresource.msc  grimresourcee.msc  main.c  new4work.txt  new4work_update.txt  newpy.py  payload.bat  payload1.vba  sc.txt  sc1.txt  test files.7z  test.reg  test.vbs  testrdp.rdp  tgram updates.txt  tmtest1.7z  winapi easy_cosmodium.txt  wpndatabase.db
